<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"


    android:background="@drawable/abc"
    android:orientation="vertical">


    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="10dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:contentDescription="@string/cnme"
            android:src="@drawable/mng"

            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:inputType="text"
            android:hint="@string/cnme"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textStyle="bold"
            android:id="@+id/EdtCname"
            />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.3"
            android:gravity="center"

            android:text="@string/Con"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eml"
                android:textColor="#FFFFFF"


                android:textSize="25sp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="40"
                android:gravity="center"
                android:hint="@string/eml"
                android:textColorHint="#FFFFFF"
                android:textColor="#FFFFFF"

                android:inputType="textEmailAddress"
                android:id="@+id/Edtemail"
                />
            <!--"#"-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="#FFFFFF"
                android:text="@string/phn"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="40"
                android:gravity="center"
                android:hint="@string/phn"
                android:textColor="#FFFFFF"
                android:id="@+id/Edtphone"

                android:inputType="phone"
                android:textColorHint="#FFFFFF"
                android:textSize="20sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/web"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="@string/web"
                android:ems="40"
                android:textColor="#FFFFFF"
                android:id="@+id/Edtweb"

                android:gravity="center"
                android:hint="@string/web"
                android:inputType="textWebEditText"
                android:textColorHint="#FFFFFF" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/des"
            android:textColor="#FFFFFF"
            android:textSize="21sp" />

        <EditText
            android:layout_width="298dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/Edtdes"
            android:hint="@string/des"
            android:inputType="textMultiLine"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/add"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/add"
            android:textColor="#FFFFFF"
            android:id="@+id/Edtadd"

            android:inputType="textPostalAddress"
            android:textColorHint="#FFFFFF" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/oph"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />


        <EditText
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:hint="@string/oph"
            android:id="@+id/Edtoph"

            android:inputType="text"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />


    </LinearLayout>

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/btn" />


</LinearLayout>